--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 machine:
   xcode:
-    version: "7.3"
+    version: "8.0"
+  environment:
+    XCODE_PROJECT: "PinkyPromise.xcodeproj"
+    XCODE_SCHEME: "PinkyPromise"
 test:
   override:
     - make test
