--- a/PinkyPromise.xcodeproj/xcshareddata/xcschemes/PinkyPromise Library.xcscheme
+++ b/PinkyPromise.xcodeproj/xcshareddata/xcschemes/PinkyPromise Library.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "______Target_PinkyPromise"
-               BuildableName = "libPinkyPromise.dylib"
-               BlueprintName = "PinkyPromise"
+               BuildableName = "libPinkyPromiseLibrary.dylib"
+               BlueprintName = "PinkyPromiseLibrary"
                ReferencedContainer = "container:PinkyPromise.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,8 +44,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "______Target_PinkyPromise"
-            BuildableName = "libPinkyPromise.dylib"
-            BlueprintName = "PinkyPromise"
+            BuildableName = "libPinkyPromiseLibrary.dylib"
+            BlueprintName = "PinkyPromiseLibrary"
             ReferencedContainer = "container:PinkyPromise.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,8 +66,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "______Target_PinkyPromise"
-            BuildableName = "libPinkyPromise.dylib"
-            BlueprintName = "PinkyPromise"
+            BuildableName = "libPinkyPromiseLibrary.dylib"
+            BlueprintName = "PinkyPromiseLibrary"
             ReferencedContainer = "container:PinkyPromise.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -84,8 +84,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "______Target_PinkyPromise"
-            BuildableName = "libPinkyPromise.dylib"
-            BlueprintName = "PinkyPromise"
+            BuildableName = "libPinkyPromiseLibrary.dylib"
+            BlueprintName = "PinkyPromiseLibrary"
             ReferencedContainer = "container:PinkyPromise.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
