Run tests with Fastlane, not make or scan
Ape Spruce's CircleCI configuration, because it's fussy

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# OS X
+# macOS
 .DS_Store
 
 # Xcode
@@ -7,5 +7,7 @@ xcuserdata
 # swift-build
 .build
 
-# scan
-test_output
+# fastlane
+fastlane/README.md
+fastlane/report.xml
+fastlane/test_output
