Support framework targets on iOS and macOS
Add license to framework umbrella header
Rename "[iOS] PinkyPromise Framework" to "PinkyPromise_iOS"
Create PinkyPromiseTests_iOS target
Use iOS framework tests for fastlane/slather/coveralls/CircleCI
Add macOS framework target and test target
Remove static library target and test target
Rearrange navigator groups

--- a/.slather.yml
+++ b/.slather.yml
@@ -3,5 +3,5 @@
 ci_service: circleci
 coverage_service: coveralls
 xcodeproj: PinkyPromise.xcodeproj
-scheme: PinkyPromise
+scheme: PinkyPromise_iOS
 output_directory: <%= ENV["CIRCLE_TEST_REPORTS"] %>
