--- a/PinkyPromise.xcodeproj/xcshareddata/xcschemes/PinkyPromise_macOS.xcscheme
+++ b/PinkyPromise.xcodeproj/xcshareddata/xcschemes/PinkyPromise_macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "0830"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "______Target_PinkyPromise"
-               BuildableName = "libPinkyPromiseLibrary.dylib"
-               BlueprintName = "PinkyPromiseLibrary"
+               BlueprintIdentifier = "0A0249361EA42C2E004068D3"
+               BuildableName = "PinkyPromise.framework"
+               BlueprintName = "PinkyPromise_macOS"
                ReferencedContainer = "container:PinkyPromise.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,9 +33,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0AB957641CB34A1100512B06"
-               BuildableName = "PinkyPromiseTests.xctest"
-               BlueprintName = "PinkyPromiseTests"
+               BlueprintIdentifier = "0A0249421EA42C42004068D3"
+               BuildableName = "PinkyPromiseTests_macOS.xctest"
+               BlueprintName = "PinkyPromiseTests_macOS"
                ReferencedContainer = "container:PinkyPromise.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,9 +43,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "______Target_PinkyPromise"
-            BuildableName = "libPinkyPromiseLibrary.dylib"
-            BlueprintName = "PinkyPromiseLibrary"
+            BlueprintIdentifier = "0A0249361EA42C2E004068D3"
+            BuildableName = "PinkyPromise.framework"
+            BlueprintName = "PinkyPromise_macOS"
             ReferencedContainer = "container:PinkyPromise.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,9 +65,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "______Target_PinkyPromise"
-            BuildableName = "libPinkyPromiseLibrary.dylib"
-            BlueprintName = "PinkyPromiseLibrary"
+            BlueprintIdentifier = "0A0249361EA42C2E004068D3"
+            BuildableName = "PinkyPromise.framework"
+            BlueprintName = "PinkyPromise_macOS"
             ReferencedContainer = "container:PinkyPromise.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,9 +83,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "______Target_PinkyPromise"
-            BuildableName = "libPinkyPromiseLibrary.dylib"
-            BlueprintName = "PinkyPromiseLibrary"
+            BlueprintIdentifier = "0A0249361EA42C2E004068D3"
+            BuildableName = "PinkyPromise.framework"
+            BlueprintName = "PinkyPromise_macOS"
             ReferencedContainer = "container:PinkyPromise.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
