--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,10 @@ jobs:
         command: bundle check || bundle install
     - run:
         name: Run tests
-        command: bundle exec fastlane run_tests
+        environment:
+        - LC_ALL: en_US.UTF-8
+        - LANG: en_US.UTF-8
+        command: bundle exec fastlane test
     - run:
         name: Send coverage report to Coveralls
         command: bundle exec slather
